Fix choices button being to small on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,7 @@ https://www.w3schools.com/howto/howto_css_modals.asp */
 #modal-choices-btn {
     font-family: inherit;
     font-size: 1rem;
-    width: 32%;
+    width: 100px;
     background-color: #000;
     color: azure;
     padding: 5px;
